--- a/index.html
+++ b/index.html
@@ -41,11 +41,161 @@
             </video>
             <div class="">
                 <p class="page-text">Telefon Bu gün Canımı <span class="paragraph-span">0</span> Kere Yaktı</p>
-                <button type="button"  class="btn btn-secondary primary-text fs-3 ">YETERRRRR</button>
+                <button type="button" class="btn btn-secondary primary-text fs-3 ">YETERRRRR</button>
                 <audio src="mp3/Emrah - Boynu Bükükler (mp3cut.net).mp3" id="berkan"></audio>
             </div>
         </div>
-       
+
+    </section>
+
+    <section class="pages-phone-text text-center ">
+        <div class="container ">
+            <div class="row phone-images">
+                <div class="col">
+                    <h2 class="fw-bold text-center ">TELEFONUN DERS ÇALIŞMA ÜZERİNDEKİ ETKİSİ</h2>
+                    <img src="img/telefon1.jpg" alt="telefon fotoğrafı">
+                    <p class="s">
+                        Telefonlar, modern yaşamın vazgeçilmez bir parçası haline geldi. Ancak, telefonlar aynı zamanda
+                        ders çalışırken dikkat dağınıklığına neden olabilecek güçlü bir araçtır.
+
+                        Telefonlar, dikkat dağıtıcı birçok şey sunar. Bunlara sosyal medya, mesajlaşma uygulamaları,
+                        oyunlar ve haberler dahildir. Bu uygulamalar ve özellikler, ders çalışırken dikkatinizi
+                        dağıtabilir ve öğrenmenizi zorlaştırabilir.
+
+                        Araştırmalar, telefonların ders çalışırken dikkat dağınıklığına neden olabileceğini
+                        göstermektedir. Bir araştırmada, telefonlarının yanında çalışan öğrencilerin, telefonlarını
+                        uzakta bırakan öğrencilere göre daha az odaklandığı ve daha fazla hata yaptığı bulundu.
+
+                        Telefonlar, ders çalışırken dikkat dağınıklığına neden olmanın birkaç farklı yolu vardır:
+
+                        Dikkatinizi dağıtabilirler. Telefonunuzun bildirimlerini kontrol etmek veya sosyal medyada
+                        gezinmek, dikkatinizi derslerinizden uzaklaştırabilir ve odaklanmayı zorlaştırabilir.
+                        Konsantrasyonu bozabilirler. Telefonun ışıkları ve sesleri, beynin öğrenme ve konsantrasyonla
+                        ilgili bölgelerini etkileyebilir.
+                        Öğrenmeyi zorlaştırabilirler. Telefonunuza bakmak, önemli bilgileri hatırlamayı zorlaştırabilir.
+                        Ders çalışırken telefonunuzdan kaçınmak, verimliliğinizi artırmak ve öğrenmenizi kolaylaştırmak
+                        için en iyi yoldur. Telefonunuzu sessize alın, bildirimlerinizi kapatın ve çalışma sırasında
+                        telefonunuzu uzak tutun.
+
+                        Ders çalışırken telefonunuzu kullanmaktan kaçınamıyorsanız, aşağıdaki ipuçları yardımcı
+                        olabilir:
+
+                        Telefonunuzu çalışma masanızdan uzağa koyun. Telefonunuza bakmak için uzanmanız gerektiğinde,
+                        dikkatinizi derslerinizden uzaklaştıracaktır.
+                        Telefonunuzu çalışma saatlerinizin dışında bırakın. Çalışmaya başlamadan önce telefonunuzu
+                        kapatın ve çalışma saatlerinizin dışında kullanmayın.
+                        Dikkatinizi dağıtacak başka şeylerden kaçının. Çalışma sırasında sosyal medyadan, televizyondan
+                        ve diğer dikkat dağıtıcı şeylerden kaçının.
+                        Telefonunuzu ders çalışırken dikkat dağıtıcı unsurlardan uzak tutmak, verimliliğinizi artırmak
+                        ve öğrenmenizi kolaylaştırmak için önemlidir.
+
+                        Ders çalışırken telefonunuzdan kaçınmak için aşağıdaki adımları takip edebilirsiniz:
+
+                        Çalışmaya başlamadan önce telefonunuzu sessize alın veya kapatın.
+                        Telefonunuzu çalışma masanızdan veya çalışma alanınızdan uzağa koyun.
+                        Telefonunuzun bildirimlerini kapatın.
+                        Sosyal medya, mesajlaşma uygulamaları ve oyunlar gibi dikkat dağıtıcı uygulamaları kapatın.
+                        Çalışmaya başlamadan önce kendinize bir çalışma hedefi belirleyin ve bu hedefe ulaşmaya
+                        odaklanın.
+                        Bu adımları takip ederek, ders çalışırken telefonunuzdan kaynaklanan dikkat dağınıklığını
+                        azaltabilir ve daha verimli bir şekilde çalışabilirsiniz.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="secondry-section">
+        <div class="container">
+            <div class="row music-text">
+                <div class="col-md-6 music-text-one">
+                    <h2 class="text-center ">Sakin Bir Müzik İle Ders Çalışmak </h2>
+                    <img src="img/müzik.jpg" class="img-fluid " alt="Ders fotoğrafı">
+                    <p>
+
+                        Müzik, ders çalışmayı daha verimli hale getirebilir. Yavaş tempolu, ritimsiz ve enstrümantal
+                        müzikler, dikkati dağıtmadan odaklanmaya yardımcı olur. Bu müzikler, beynin öğrenme ve
+                        konsantrasyonla ilgili bölgelerini uyararak dikkati dağıtıcı düşünceleri azaltır.
+
+                        Ders çalışırken müzik dinlemek için dikkat etmeniz gereken bazı noktalar şunlardır:
+
+                        Müziğin sesini çok yüksek açmayın.
+                        Müzik dinlerken dikkatinizi dağıtacak başka şeyler yapmayın.
+                        Ders çalışırken müzik dinlemek, verimliliği artırmak ve stresi azaltmak için etkili bir yol
+                        olabilir.
+                    </p>
+                </div>
+                <div class="col-md-6 music-text-two">
+                    <h2 class="text-center ">Gürültülü Müzik İle Ders Çalışmak</h2>
+                    <img src="img/gürültü.png" class="img-fluid " alt="Gürültülü-resim">
+                    <p>
+                        Ders çalışırken gürültülü müzik dinlemek, dikkati dağıtabilir, konsantrasyonu bozabilir ve
+                        öğrenmeyi zorlaştırabilir. Bu nedenle, ders çalışırken gürültülü müzikten kaçınmak en iyisidir.
+
+                        Ders çalışırken gürültülü müzik dinlemek isteyenler için bazı öneriler şunlardır:
+
+                        Müziğin sesini çok yüksek açmayın.
+                        Müziğin ritmini ve temposunu dikkatlice seçin. Yavaş tempolu, ritimsiz müzikler, gürültülü
+                        müzikten daha az dikkat dağıtıcı olabilir.
+                        Müzik dinlerken dikkatinizi dağıtacak başka şeyler yapmayın. Müziğin keyfini çıkarın ve
+                        dersinize odaklanın.
+                        Ders çalışırken gürültülü müzik kullanmaktan kaçınmak, verimliliğinizi artırmak ve öğrenmenizi
+                        kolaylaştırmak için en iyi yoldur.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="pages-card">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="row card-images">
+                        <div class="col-md-4">
+                            <div class="card" style="width: 18rem;">
+                                <img src="img/d1.jpg" class="card-img-top" alt="card-fotograf">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <audio src="https://youtu.be/PeUQ9LEy7oE?si=OHxkqdXH5hJGIiZO" id="card-one"></audio>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card" style="width: 18rem;">
+                                <img src="img/d2.jpg" class="card-img-top" alt="card-fotograf">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-md-4">
+                            <div class="card" style="width: 18rem;">
+                                <img src="img/d3.jpg" class="card-img-top" alt="card-fotograf">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
