--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk
                                         of the card's content.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                    <audio src="https://youtu.be/PeUQ9LEy7oE?si=OHxkqdXH5hJGIiZO" id="card-one"></audio>
+                                    <a href="#" class="btn btn-primary cards-button-one">Müziği Dinle</a>
+                                    <audio src="https://youtu.be/PeUQ9LEy7oE?si=OHxkqdXH5hJGIiZO" class="cards-one" id="card-one"></audio>
                                 </div>
                             </div>
                         </div>
@@ -174,7 +174,8 @@
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk
                                         of the card's content.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <a href="#" class="btn btn-primary">Müziği Dinle</a>
+                                    <audio src="https://youtu.be/PeUQ9LEy7oE?si=OHxkqdXH5hJGIiZO" id="card-one"></audio>
                                 </div>
                             </div>
                         </div>
@@ -188,7 +189,8 @@
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk
                                         of the card's content.</p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    <a href="#" class="btn btn-primary">Müziği Dinle</a>
+                                    <audio src="mp3/Ay Düşünce (Fon).mp3" id="card-one"></audio>
                                 </div>
                             </div>
                         </div>
