--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <source src="video/river.mp4">
             </video>
             <div class="">
-                <p class="page-text">Telefon Bu gün Canımı <span class="paragraph-span">0</span> Kere Yaktı</p>
+                <p class="page-text">Telefon Bu gün Canımı <span class="paragraph-span"></span> Kere Yaktı</p>
                 <button type="button" class="btn btn-secondary primary-text fs-3 ">YETERRRRR</button>
                 <audio src="mp3/Emrah - Boynu Bükükler (mp3cut.net).mp3" id="berkan"></audio>
             </div>
@@ -54,7 +54,8 @@
                 <div class="col">
                     <h2 class="fw-bold text-center ">TELEFONUN DERS ÇALIŞMA ÜZERİNDEKİ ETKİSİ</h2>
                     <img src="img/telefon1.jpg" alt="telefon fotoğrafı">
-                    <p class="s">
+                    <div class="text-center ">
+                    <p class="">
                         Telefonlar, modern yaşamın vazgeçilmez bir parçası haline geldi. Ancak, telefonlar aynı zamanda
                         ders çalışırken dikkat dağınıklığına neden olabilecek güçlü bir araçtır.
 
@@ -100,6 +101,7 @@
                         Bu adımları takip ederek, ders çalışırken telefonunuzdan kaynaklanan dikkat dağınıklığını
                         azaltabilir ve daha verimli bir şekilde çalışabilirsiniz.
                     </p>
+                </div>
                 </div>
             </div>
         </div>
@@ -157,9 +159,9 @@
                                 <img src="img/d1.jpg" class="card-img-top" alt="card-fotograf">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk
-                                        of the card's content.</p>
+                                    <p class="card-text">Sayısal ders çalışırken her zaman slow bir müzik senin daha etiki
+                                        anlamana yardımcı olacaktır
+                                    </p>
                                     <a href="#!" class="btn btn-primary cards-button-one">Müziği Dinle</a>
                                     <audio src="mp3/Ay Düşünce (Fon).mp3" class="cards-one" id="card-one"></audio>
                                 </div>
@@ -171,11 +173,11 @@
                                 <img src="img/d2.jpg" class="card-img-top" alt="card-fotograf">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk
-                                        of the card's content.</p>
-                                    <a href="#!" class="btn btn-primary">Müziği Dinle</a>
-                                    <audio src="https://youtu.be/PeUQ9LEy7oE?si=OHxkqdXH5hJGIiZO" id="card-one"></audio>
+                                    <p class="card-text">Müzik kalbi ve ruhu dinlendiren bir egzzersizdir. Unutma zihinde müzik ile
+                                        rahatlar.
+                                    </p>
+                                    <a href="#!" class="btn btn-primary cards-button-one">Müziği Dinle</a>
+                                    <audio src="mp3/Şiir Okumak İçin Güzel Fon Müziği.mp3" id="card-two"></audio>
                                 </div>
                             </div>
                         </div>
@@ -186,11 +188,11 @@
                                 <img src="img/d3.jpg" class="card-img-top" alt="card-fotograf">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk
-                                        of the card's content.</p>
-                                    <a href="#!" class="btn btn-primary">Müziği Dinle</a>
-                                    <audio src="mp3/Ay Düşünce (Fon).mp3" id="card-one"></audio>
+                                    <p class="card-text">Her zaman low müzik dinlemek insanınn uykusunu getirebilir bu yüzden
+                                        arada tarz değişmeli.
+                                    </p>
+                                    <a href="#!" class="btn btn-primary cards-button-one">Müziği Dinle</a>
+                                    <audio src="mp3/Gülşen - Of Of (Dance Remix).mp3" id="card-three"></audio>
                                 </div>
                             </div>
                         </div>
