--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <div class="container">
             <div class="row music-text">
                 <div class="col-md-6 music-text-one">
-                    <h2 class="text-center ">Sakin Bir Müzik İle Ders Çalışmak </h2>
-                    <img src="img/müzik.jpg" class="img-fluid " alt="Ders fotoğrafı">
+                    <h2 class="text-center mb-5  ">Sakin Bir Müzik İle Ders Çalışmak </h2>
+                    <img src="img/müzik.jpg" class="img-fluid mb-4" alt="Ders fotoğrafı">
                     <p>
 
                         Müzik, ders çalışmayı daha verimli hale getirebilir. Yavaş tempolu, ritimsiz ve enstrümantal
@@ -128,8 +128,8 @@
                     </p>
                 </div>
                 <div class="col-md-6 music-text-two">
-                    <h2 class="text-center ">Gürültülü Müzik İle Ders Çalışmak</h2>
-                    <img src="img/gürültü.png" class="img-fluid " alt="Gürültülü-resim">
+                    <h2 class="text-center mb-5">Gürültülü Müzik İle Ders Çalışmak</h2>
+                    <img src="img/gürültü.png" class="img-fluid mb-4" alt="Gürültülü-resim">
                     <p>
                         Ders çalışırken gürültülü müzik dinlemek, dikkati dağıtabilir, konsantrasyonu bozabilir ve
                         öğrenmeyi zorlaştırabilir. Bu nedenle, ders çalışırken gürültülü müzikten kaçınmak en iyisidir.
@@ -149,16 +149,16 @@
         </div>
     </section>
 
-    <section class="pages-card">
+    <section class="pages-card ">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col ">
                     <div class="row card-images">
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-4 mb-lg-0  ">
                             <div class="card" style="width: 18rem;">
                                 <img src="img/d1.jpg" class="card-img-top" alt="card-fotograf">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Müzik Dinle Çalış</h5>
                                     <p class="card-text">Sayısal ders çalışırken her zaman slow bir müzik senin daha etiki
                                         anlamana yardımcı olacaktır
                                     </p>
@@ -168,11 +168,11 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-4 mb-lg-0 ">
                             <div class="card" style="width: 18rem;">
                                 <img src="img/d2.jpg" class="card-img-top" alt="card-fotograf">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Müzik Dinle Çalış</h5>
                                     <p class="card-text">Müzik kalbi ve ruhu dinlendiren bir egzzersizdir. Unutma zihinde müzik ile
                                         rahatlar.
                                     </p>
@@ -187,7 +187,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="img/d3.jpg" class="card-img-top" alt="card-fotograf">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Bırak Dersi Kafa Dağıt</h5>
                                     <p class="card-text">Her zaman low müzik dinlemek insanınn uykusunu getirebilir bu yüzden
                                         arada tarz değişmeli.
                                     </p>
