--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                     <p class="card-text">Her zaman low müzik dinlemek insanınn uykusunu getirebilir bu yüzden
                                         arada tarz değişmeli.
                                     </p>
-                                    <a href="#!" class="btn btn-primary cards-button-one">Müziği Dinle</a>
+                                    <a href="#!" class="btn btn-primary cards-button-one">Müziği Dinle.</a>
                                     <audio src="mp3/Gülşen - Of Of (Dance Remix).mp3" id="card-three"></audio>
                                 </div>
                             </div>
